# ditrigon

./: GTK_CODE_QUALITY.md  meson.build  modernization_roadmap.md
data/: ditrigon.gresource.xml
data/ui/gtk4/dialogs/: banlist-window.ui  dcc-chat-window.ui  dcc-file-window.ui  ignore-window.ui  joind-window.ui  notify-add-dialog.ui  notify-window.ui  plugin-window.ui  servlist-edit-window.ui  urlgrab-window.ui
data/ui/gtk4/maingui/: userlist-shell.ui
data/ui/gtk4/rows/: userlist-row.ui
plugins/fishlim/: fish.c  fish.h  keystore.c  plugin_hexchat.c  utils.c
plugins/lua/: lua.c
plugins/perl/: perl.c
plugins/perl/lib/: HexChat.pm
plugins/python/: _hexchat.py
src/common/: cfgfiles.c  dcc.c  dcc.h  fe.h  hexchat-plugin.h  hexchat.c  hexchat.h  hexchat.h.orig  inbound.c  inbound.h  meson.build  network.c  notify.c  outbound.c  plugin-identd.c  plugin.c  plugin.h  proto-irc.c  proto-irc.h  scram.c  server.c  ssl.c  text.c  textevents.in  upload.c  upload.h  url.c  url.h  url_preview.c  url_preview.h
src/common/tests/: meson.build  stubs.c  test_main.c  test_url.c  test_util.c
src/fe-gtk/: maingui.c
src/fe-gtk4/: adw.c  banlist.c  chanview-tree.c  chanview.c  dccgui.c  fe-gtk4.h  ignoregui.c  joind.c  maingui.c  menu.c  notifygui.c  palette.c  plugingui.c  servlistgui.c  urlgrab.c  userlistgui.c  xtext.c
tests/: common_security_poc.c  dcc_accept_unsolicited_security_poc.py  dcc_send_listener_hijack_security_poc.py  irc_partial_send_queue_poc.py  meson.build  short_send_preload.c
